2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Fix update checker.

2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.0 released.

2015-01-16  c.hetherington  <cth@carlh.net>

	* Update fr_FR translation from Thierry Journet.

2015-01-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.42 released.

2015-01-12  c.hetherington  <cth@carlh.net>

	* Trim whitespace from FTP replies
	to fix problems with certificate download (#442).

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.41 released.

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Fix for subtitle timing with trim.

2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.40 released.

2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.39 released.

2015-01-09  Carl Hetherington  <cth@carlh.net>

	* Label h:m:s:f in timing panel.

	* Version 1.76.38 released.

2015-01-09  c.hetherington  <cth@carlh.net>

	* Potentially fix another crash at 99% due
	to an over-assertive assert in the audio
	deinterleaving code.

2015-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.37 released.

2015-01-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.36 released.

2015-01-08  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2015-01-07  c.hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manual AC.

2015-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.35 released.

2015-01-07  c.hetherington  <cth@carlh.net>

	* Display sample aspect ratio in video tab if the
	source file declares it.

	* Add a little more debugging for 99% hangs.

2015-01-06  c.hetherington  <cth@carlh.net>

	* Fix incorrect lengths of sound files when using
	very low frame-rate video (#440).

2015-01-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.34 released.

2015-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix for non-playing of FFmpeg-decoded files
	that return AVERROR_INVALIDDATA.
